--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -63,3 +63,28 @@
 	doi = {10.1017/9781139016476},
 	url = {http://dx.doi.org/10.1017/9781139016476}
 }
+
+@article{intergovernmentalpanelonclimatechange(ipcc)2023,
+	title = {Climate Change 2022 {\textendash} Impacts, Adaptation and Vulnerability},
+	author = {{Intergovernmental Panel on Climate Change (IPCC)}, },
+	year = {2023},
+	month = {06},
+	date = {2023-06-22},
+	doi = {10.1017/9781009325844},
+	url = {http://dx.doi.org/10.1017/9781009325844}
+}
+
+@article{ludwig2023,
+	title = {Assessing and improving the transferability of current global spatial prediction models},
+	author = {Ludwig, Marvin and {Moreno{-}Martinez}, Alvaro and {Hölzel}, Norbert and Pebesma, Edzer and Meyer, Hanna},
+	year = {2023},
+	month = {01},
+	date = {2023-01-26},
+	journal = {Global Ecology and Biogeography},
+	pages = {356--368},
+	volume = {32},
+	number = {3},
+	doi = {10.1111/geb.13635},
+	url = {http://dx.doi.org/10.1111/geb.13635},
+	langid = {en}
+}
