--- a/vignettes/Geo_Data.Rmd
+++ b/vignettes/Geo_Data.Rmd
@@ -8,6 +8,18 @@ This script implements the download and processing of geospatial data for model 
 
 First we download all data in a resolution of 5 meters. Please define the extent
 ```{r}
+packages <- c('influxdbclient', 'ggplot2', 'tidyverse', 'lubridate', 'dplyr', 'caret',
+              'vip', 'parsnip', 'workflows', 'tune', 'dials', 'stringr', 'terra', 'stars',
+              'sf', 'plyr', 'doParallel', 'foreach', 'terrainr', 'starsExtra', 'pdp',
+              'recipes', 'tidyterra', 'shiny', 'xgboost', 'kableExtra', 'rnaturalearth', 'zoo',
+              'moments', 'tibble', 'rsample', 'yardstick', 'cowplot', 'purrr', 'renv',
+              'ranger','Boruta','sp',"jsonlite","httr","scales","MODISTools")
+
+# Load the R script to install and load all the packages from above
+source("../R/load_packages.R")
+load_packages(packages = packages)
+
+
 extent = c(xmin = 2594313, xmax = 2605813, ymin = 1194069, ymax = 1204804)
 source("../R/download_geospatial.R")
 download_geospatial(extent)
@@ -30,6 +42,38 @@ meters_new <- tibble(
   Chosen_buffer_radiusm = c(5, 125, 5, 5, 5, 250,5)
 )
 meters <- bind_rows(meters_burger, meters_new)
+
+source("../R/processing_geospatial.R")
+processing_geospatial(meters)
+```
+
+
+Alternativly, one can also create several buffer zones by:
+
+```{r}
+
+meters_burger <- tibble(
+  Category = c("Land Cover Building", "Open Space Sealed", "Open Space Forest", "Open Space Garden", "Open Space Water", "Open Space Agriculture"),
+  Variable = c("LC_B", "OS_SE", "OS_FO", "OS_GA", "OS_WA", "OS_AC")
+)
+
+# Creating a new tibble for the buffer radius expansion
+buffer_values <- tibble(Chosen_buffer_radiusm = c(25, 100, 750))
+
+# Expand meters_burger to include new Chosen_buffer_radiusm values by crossing with buffer_values
+meters_burger <- crossing(meters_burger, buffer_values)
+
+# New entries to add
+meters_new <- tibble(
+  Category = c("Aspect", "Flow accumulation", "Roughness", "Slope", "Terrain index","DEM"),
+  Variable = c("ASP", "FLAC", "ROU", "SLO", "TPI","DEM")
+)
+buffer_values <- tibble(Chosen_buffer_radiusm = c(5, 50, 500))
+meters_new <- crossing(meters_new, buffer_values)
+
+
+meters <- bind_rows(meters_burger, meters_new)|>
+  add_row(Category = "NDVI", Variable = "NDVI", Chosen_buffer_radiusm = 250)
 
 source("../R/processing_geospatial.R")
 processing_geospatial(meters)
